--- a/src/scss/themes/general.scss
+++ b/src/scss/themes/general.scss
@@ -231,3 +231,54 @@ strong {
 .offcanvas-bottom {
   min-height: 240px;
 }
+
+// pointer
+.c-pointer {
+  cursor: pointer;
+}
+
+// action buttons
+.action-btn {
+  cursor: pointer;
+  color: #f5f5f5;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background: #1890ff;
+  &.disabled {
+    pointer-events: none;
+    background: #1890ff80;
+  }
+  &.danger {
+    background: #ff1818;
+    &.disabled {
+      pointer-events: none;
+      background: #ff181880;
+    }
+  }
+}
+
+// table filter
+.tbl-search {
+  max-width: 400px;
+}
+
+// form-section 
+.form-section {
+  position: relative;
+  margin: 24px 0px;
+  hr {
+      border-width: 2px;
+  }
+  span {
+      top: -12px;
+      left: 16px;
+      z-index: 1;
+      font-size: 16px;
+      color: #404040;
+      padding: 0px 8px;
+      font-weight: 600;
+      position: absolute;
+      background-color: #fafafb;
+  }
+  
+}
