--- a/src/app/theme/layouts/user-layout/navigation/nav-content/nav-content.component.html
+++ b/src/app/theme/layouts/user-layout/navigation/nav-content/nav-content.component.html
@@ -3,7 +3,7 @@
   <div class="navbar-content">
     <ul class="nav coded-inner-navbar" (clickOutside)="fireOutClick()" (mouseleave)="navMob()">
       @for (item of navigations; track item) {
-        @if (item.type === 'group') {
+        @if (item.type === 'group' && !item.hidden) {
           <app-nav-group [item]="item"></app-nav-group>
         }
       }
