--- a/src/app/web/patient/billing/billing.component.html
+++ b/src/app/web/patient/billing/billing.component.html
@@ -26,7 +26,7 @@
                         <td>
                             <a href="javascript:" class="text-muted">{{ bill.id }}</a>
                         </td>
-                        <td>{{ bill.patientId }}</td>
+                        <td>{{ bill.patientName }}</td>
                         <td>{{ bill.billingDate }}</td>
                         <td>{{ bill.finalBillAmount }}</td>
                         <td>{{ bill.amountPaid ? bill.amountPaid : '-' }}</td>
@@ -35,7 +35,7 @@
                         <td class="text-end py-2">
                             <div class="d-flex justify-content-end">
                                 <i class="icon-font ms-2 action-btn" antIcon theme="outline" type="edit" (click)="editPatent(bill.id)"></i>
-                                <i class="icon-font ms-2 action-btn danger  disabled" antIcon theme="outline" type="delete"></i>
+                                <i class="icon-font ms-2 action-btn danger" antIcon theme="outline" type="delete" (click)="deleteBill(bill)"></i>
                             </div>
                         </td>
                     </tr>
