--- a/src/app/web/general/dashboard/dashboard.component.html
+++ b/src/app/web/general/dashboard/dashboard.component.html
@@ -18,4 +18,37 @@
         </app-card>
       </div>
     }
+
+    <div class="col-md-12 col-xl-8">
+      <app-monthly-bar-chart />
+    </div>
+    <div class="col-md-12 col-xl-4">
+      <app-income-overview-chart />
+    </div>
+  
+    <div class="col-md-12 col-xl-8">
+      <app-sales-report-chart />
+    </div>
+    <div class="col-md-12 col-xl-4">
+      <div class="card">
+        <div class="card-body">
+          <div class="row justify-content-between">
+            <div class="col-auto">
+              <h5>Help & Support Chat</h5>
+              <p class="mb-3">Typical replay within 5 min</p>
+            </div>
+            <div class="col-auto">
+              <div class="user-group mb-3">
+                <img src="assets/images/user/avatar-1.jpg" alt="image" />
+                <img src="assets/images/user/avatar-2.jpg" alt="image" />
+                <img src="assets/images/user/avatar-3.jpg" alt="image" />
+              </div>
+            </div>
+          </div>
+          <div class="d-grid">
+            <div class="btn btn-primary">Need Help?</div>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
